# MCC

./: .gitignore  ChangeLog.md  LICENSE  MCC.cabal  Makefile  README.md  cabal.project.local  how-to-run.txt  lash64.diff  mcc  output.txt
emacs/: mc.el
errors/: AmbiguousInput.mc  DeadLock.mc  DeadLock2.mc  DeadLock3.mc  FutureLock.mc  InputCapability1.mc  InterfaceMismatch.mc  Lock.mc  Math.mc  MergeEmpty.mc  MergeError.mc  NonLinearInput.mc  Self.mc  Unbounded.mc  UnknownMailbox.mc  UnknownMessage.mc  UnknownProcess.mc
examples/: AmbiguousInput.mc  Buffer.mc  Done.mc  Future.mc  Lock.mc  LockFuture.mc  LockTypeState.mc  Merge.mc  Omega.mc  PingPong.mc  PrintServer.mc  SubInterface.mc
src/: Aux.hs  Auxi.hs  Constraints.hs  Dependencies.hs  Exceptions.hs  Inference.hs  Interp.hs  Language.hs  Lexer.x  Main.hs  MultiSet.hs  Parser.hs  Parser.y  Pattern.hs  Render.hs  Simulation.hs  Validation.hs  lash_trampoline.c
src/Presburger/: Formula.hs
src/Presburger/Lash/: Automaton.hs  Solver.hs
src/Presburger/Z3/: Solver.hs
